refactor(api): improve api logic for get requests endpoint
