# back/src/main/kotlin/org/sejapoe/videomanager/controller/RequestController.kt
@@ -4,11 +4,10 @@ import io.swagger.v3.oas.annotations.media.Schema
 import jakarta.validation.Valid
 import org.sejapoe.videomanager.dto.request.CreateRequestReq
 import org.sejapoe.videomanager.dto.request.FilterRequestReq
-import org.sejapoe.videomanager.dto.request.FilterUserRequestReq
 import org.sejapoe.videomanager.mapper.RequestMapper
 import org.sejapoe.videomanager.model.User
 import org.sejapoe.videomanager.security.annotations.IsAdmin
-import org.sejapoe.videomanager.security.annotations.IsUser
+import org.sejapoe.videomanager.security.annotations.Secure
 import org.sejapoe.videomanager.service.RequestService
 import org.springdoc.core.annotations.ParameterObject
 import org.springframework.http.HttpStatus
@@ -32,18 +31,17 @@ class RequestController(
             createRequestReq.linkToMoodle
         ).let(requestMapper::toRequestRes)
 
-    @IsAdmin
+    @Secure
     @GetMapping("/api/requests")
-    fun getRequests(@ParameterObject @Schema filterRequestReq: FilterRequestReq) =
-        requestService.getAll(filterRequestReq.toPredicate(), filterRequestReq.toPageable())
-            .map(requestMapper::toRequestRes)
-
-    @IsUser
-    @GetMapping("/api/user/requests")
-    fun getUserRequests(
-        @ParameterObject @Schema filterRequestReq: FilterUserRequestReq,
+    fun getRequests(
+        @ParameterObject @Schema filterRequestReq: FilterRequestReq,
         @AuthenticationPrincipal user: User
     ) =
-        requestService.getAll(filterRequestReq.toPredicateWithUser(user.id), filterRequestReq.toPageable())
+        requestService.getAll(
+            user,
+            filterRequestReq.user,
+            filterRequestReq.toPredicate(),
+            filterRequestReq.toPageable()
+        )
             .map(requestMapper::toRequestRes)
 }
